# neocobot_robot

./: .gitignore  README.md
neo_bringup/: CMakeLists.txt  package.xml
neo_bringup/launch/: driver_bringup.launch  neo_driver_bringup.launch
neo_bringup/launch/NX63A1/: NX63A1_bringup.launch  NX63A1_rviz_bringup.launch
neo_bringup/launch/NX63A2/: NX63A2_bringup.launch  NX63A2_rviz_bringup.launch
neo_bringup/launch/omni6_lite_bringup/: omni6_lite_bringup.launch  omni6_lite_rviz_bringup.launch
neo_bringup/launch/omni_6_bringup/: omni_6_bringup.launch
neo_description/: CMakeLists.txt  package.xml
neo_description/launch/: NX63A1_upload.launch  NX63A1_with_ag95_d435_upload.launch  NX63A1_with_ag95_upload.launch  NX63A2_upload.launch  NX63A2_with_ag95_d435_upload.launch  NX63A2_with_ag95_upload.launch  ag95_upload.launch  d435_upload.launch  omni6_lite_upload.launch  omni_6_rviz_test.launch  omni_6_rviz_upload.launch  view_omni6_lite_rviz.launch  view_rviz.launch
neo_description/meshes/EndEffector/AG95/: flange.STL
neo_description/meshes/NX63A1/: base_link.STL  fifth_link.STL  fifth_link.stl  first_link.STL  first_link.stl  fourth_link.STL  fourth_link.stl  second_link.stl  sixth_link.STL  sixth_link.stl  third_link.STL
neo_description/meshes/NX63A2/: base_link.STL  fifth_link.STL  first_link.STL  fourth_link.STL  sixth_link.STL  third_link.STL
neo_description/meshes/Sensor/D435/: camera_flange_link.STL  d435.STL
neo_description/meshes/neo_gripper/: gripper_link.stl
neo_description/meshes/omni6_lite/: base_link.stl  third_link.stl
neo_description/meshes/omni_6/: base_link.stl  fifth_link.stl  first_link.stl  fourth_link.stl  second_link.stl  sixth_link.stl
neo_description/rviz/: NX63A1.rviz  NX63A1_with_ag95.rviz  NX63A1_with_ag95_d435.rviz  NX63A2.rviz  NX63A2_with_ag95.rviz  NX63A2_with_ag95_d435.rviz  ag95.rviz  d435.rviz
neo_description/rviz/omni6_lite/: omni6_lite.rviz
neo_description/rviz/omni_6/: omni_6.rviz
neo_description/urdf/: common.gazebo.xacro
neo_description/urdf/EndEffector/AG95/: dh_robotics_ag95.gazebo.xacro  dh_robotics_ag95.transmission.xacro  dh_robotics_ag95.urdf.xacro  dh_robotics_ag95_gripper.urdf.xacro
neo_description/urdf/NX63A1/: NX63A1.gazebo.xacro  NX63A1.transmission.xacro  NX63A1.urdf.xacro  NX63A1_robot.urdf.xacro  NX63A1_robot_with_ag95.urdf.xacro  NX63A1_robot_with_ag95_d435.urdf.xacro  NX63A1_with_ag95.urdf.xacro  NX63A1_with_ag95_d435.urdf.xacro
neo_description/urdf/NX63A2/: NX63A2.gazebo.xacro  NX63A2.transmission.xacro  NX63A2.urdf.xacro  NX63A2_robot.urdf.xacro  NX63A2_with_ag95.urdf.xacro  NX63A2_with_ag95_d435.urdf.xacro
neo_description/urdf/Sensor/D435/: realsense_d435.gazebo.xacro  realsense_d435.urdf.xacro  realsense_d435_camera.urdf.xacro
neo_description/urdf/omni6_lite/: omni6_lite.gazebo.xacro  omni6_lite.urdf.xacro  omni6_lite_robot.urdf.xacro
neo_description/urdf/omni_6/: omni_6.gazebo.xacro  omni_6.transmission.xacro  omni_6.urdf.xacro  omni_6_robot.urdf.xacro
neo_driver/: CMakeLists.txt  package.xml
neo_driver/applications/: follow_joint_trajectory_application.cpp
neo_driver/include/: NeoDriver.h  NeoServiceInterface.h  NeoServiceMetaType.h  interfaces.h  metaType.h  rosUtils.h
neo_driver/include/neo_driver/api/: argdefine.h  client.h  logger.h  receiver.h  robot.h  tasks.h  tools.h
neo_driver/src/: NeoDriver.cpp  NeoMainNode.cpp  interfaces.cpp
neo_gazebo/: CMakeLists.txt  package.xml
neo_gazebo/controller/: arm_controller.yaml  effort_controller_omni_6.yaml
neo_gazebo/launch/: NX63A1_gazebo.launch  NX63A1_with_ag95_d435_gazebo.launch  NX63A1_with_ag95_gazebo.launch  (+8 more)
neo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
neo_msgs/: CMakeLists.txt  package.xml
neo_msgs/msg/: Pose.msg
neo_msgs/srv/: GetJointIds.srv  MoveEndpos.srv  MoveJ.srv  MoveJoints.srv  Stop.srv
neocobot/neo_bringup/: CMakeLists.txt  package.xml
neocobot/neo_bringup/launch/omni_6_bringup/: omni_6_bringup.launch  omni_6_rviz_display.launch
neocobot/neo_bringup/src/real_rviz/: CMakeLists.txt  real_rviz.cpp
neocobot/neo_description/: CMakeLists.txt  package.xml
neocobot/neo_description/launch/omni_6_launch/: omni_6_rviz_upload.launch  omni_6_upload.launch
neocobot/neo_description/meshes/omni_6/: base_link.STL  fifth_link.STL  first_link.STL  fourth_link.STL  second_link.STL  sixth_link.STL  third_link.STL  third_link.stl
neocobot/neo_description/rviz/: omni_6.rviz
neocobot/neo_description/urdf/: common.gazebo.xacro
neocobot/neo_description/urdf/omni_6/: omni_6.gazebo.xacro  omni_6.transmission.xacro  omni_6.urdf.xacro  omni_6_robot.urdf.xacro
neocobot/neo_driver/: CMakeLists.txt  package.xml
neocobot/neo_driver/cmake/: Findapi.cmake
neocobot/neo_driver/demo/: CMakeLists.txt  TrajMoveDemo.cpp
neocobot/neo_driver/include/neo_driver/: neo_driver.h
neocobot/neo_driver/include/neo_driver/api/: Robot.h  heart.h  logger.h  neoclient.h  parser.h  recvthread.h  safemap.h  safequeue.h  sender.h  sendthread.h  stdafx.h  tasks.h  thread.h
neocobot/neo_driver/src/: neo_driver.cpp
neocobot/neo_gazebo/: CMakeLists.txt  package.xml
neocobot/neo_gazebo/controller/: arm_controller_omni_6.yaml  position_controller_omni_6.yaml
neocobot/neo_gazebo/launch/: controller_utils.launch  omni_6.launch  omni_6_gazebo_upload.launch
neocobot/neo_gazebo/plugin/: joint_controllers.py
neocobot/neo_gazebo/test/: omni_6_gazebo_test.launch
neocobot/neo_kinematics/: CMakeLists.txt  package.xml
neocobot/neo_msgs/: CMakeLists.txt  package.xml
neocobot/neo_msgs/msg/: EndPose.msg  JointAngles.msg  JointCurrent.msg  JointVelocity.msg
neocobot/neo_msgs/srv/: Calibrate.srv  Forward.srv  GetInput.srv  GetMotorIds.srv  Hold.srv  Inverse.srv  MoveJ.srv  MoveL.srv  MoveToAngles.srv  MoveToPose.srv  RobotCMD.srv  SetEOATAction.srv  SetOutput.srv
neocobot/neo_robot/: CMakeLists.txt  package.xml
neocobot_robot/: CMakeLists.txt  package.xml
omni6_lite_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
omni_6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+122 files in other folders)
