<?xml version="1.0"?>
<package>
  <name>neo_bringup</name>
  <version>0.1.0</version>
  <description>
      The neo_bringup package.
  </description>
  <author>Huang Shaojie</author>
  <author email="shaojie@neocobot.com">Huang Shaojie</author>
  <maintainer email="shaojie@neocobot.com">Huang Shaojie</maintainer>
  <url type="website">https://github.com/neocobot-nac/NeoROS</url>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>neo_description</run_depend>
  <run_depend>neo_driver</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
</package>
