<?xml version="1.0"?>
<package>
  <name>neo_description</name>
  <version>1.0.0</version>
  <description>The neo_description package</description>
  <author>Huang Shaojie</author>
  <author email="shaojie@neocobot.com">Huang Shaojie</author>
  <maintainer email="shaojie@neocobot.com">Huang Shaojie</maintainer>
  <url type="website">https://github.com/neocobot-nac/NeoROS</url>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
