<?xml version="1.0"?>
<package>
  <name>neo_msgs</name>
  <version>1.0.0</version>
  <description>The neo_msgs package</description>
  <author>Huang Shaojie</author>
  <author email="shaojie@neocobot.com">Huang Shaojie</author>
  <maintainer email="shaojie@neocobot.com">Huang Shaojie</maintainer>
  <url type="website">https://github.com/neocobot-nac/NeoROS</url>
  <license>GPL-3.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
