<?xml version="1.0"?>
<package>
  <name>neocobot_robot</name>
  <version>1.0.0</version>
  <description>
    ROS package for Neocobot Robots
  </description>
  <author>Huang Shaojie</author>
  <author email="shaojie@neocobot.com">Huang Shaojie</author>
  <maintainer email="shaojie@neocobot.com">Huang Shaojie</maintainer>
  <url type="website">https://github.com/neocobot-nac/neocobot_robot</url>
  <license>GPL-3.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>neo_bringup</run_depend>
  <run_depend>neo_driver</run_depend>
  <run_depend>neo_description</run_depend>
  <run_depend>neo_gazebo</run_depend>
  <run_depend>neo_msgs</run_depend>
  <run_depend>neo_moveit_config</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
