<?xml version="1.0"?>
<package>
  <name>neo_description</name>
  <version>0.2.0</version>
  <description>The neo_description package</description>
  <author>Huang Shaojie</author>
  <author email="shaojie@neocobot.com">Huang Shaojie</author>
  <maintainer email="shaojie@neocobot.com">Huang Shaojie</maintainer>
  <url type="website">https://github.com/neocobot-nac/NeoROS</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- rviz plugin="${prefix}/plugin_description.xml"/ -->
  </export>
</package>
