<?xml version="1.0"?>
<package>
  <name>neo_gazebo</name>
  <version>0.2.0</version>
  <description>The neo_gazebo package</description>
  <author>Huang Shaojie</author>
  <author email="shaojie@neocobot.com">Huang Shaojie</author>
  <maintainer email="shaojie@neocobot.com">Huang Shaojie</maintainer>
  <url type="website">https://github.com/neocobot-nac/NeoROS</url>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>neo_description</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>python_qt_binding</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
  </export>
</package>
