<?xml version="1.0"?>
<package>
  <name>neo_msgs</name>
  <version>0.1.0</version>
  <description>
      The neo_msgs package.
  </description>

  <maintainer email="shaojie@neocobot.com">Huang Shaojie</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/neo_robot</url>

  <author>Huang Shaojie</author>
  <author email="shaojie@neocobot.com">Huang Shaojie</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>