<?xml version="1.0"?>
<package>
  <name>neo_robot</name>
  <version>0.1.0</version>
  <description>
      Drivers, description, and utilities for Neo Robot Arms.
  </description>

  <maintainer email="shaojie@neocobot.com">Huang Shaojie</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/neo_robot</url>

  <author>Huang Shaojie</author>
  <author email="shaojie@neocobot.com">Huang Shaojie</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>neo_description</run_depend>
  <run_depend>neo_msgs</run_depend>
  <run_depend>neo_driver</run_depend>
  <run_depend>neo_gazebo</run_depend>
  <run_depend>neo_kinematics</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
